# sixdof

./: .gitignore  Cargo.toml  Dockerfile  NOTES.md  README.md  config.toml
.github/workflows/: test_build_package.yml
assets/: AUDIT.md  m2.map
assets/data/: hud.ron  player_ship.ron  ships.ron  weapons.ron
assets/data/weapons/: DualLasers.ron  RocketLauncher.ron  dual_lasers.weapon.ron  grunt_plasma.weapon.ron  hyper_plasma.weapon.ron  rocket_launcher.weapon.ron  shotgun.weapon.ron
assets/maps/: dm.map  m1.map  m3.map  m4.map
assets/scripts/: welcome.lua
assets/shaders/: atomized.wgsl  electro_static_ripple.wgsl  fire_smoke.wgsl  plasma.wgsl
assets/textures/: carved_stone_1024x1024.png~  carved_stone_256x256.kra
assets/textures/decals/: decal_scorch_64x64.png~
audio/: Cargo.toml
audio/examples/: basic.rs
audio/src/: data.rs  lib.rs  settings.rs
autosave/: m4.1.map
client/: Cargo.toml
client/src/: bot.rs  lib.rs  player.rs  weapon.rs
client/src/menu/: mod.rs
client/src/player/: mod.rs
data/weapons/: dual_lasers.weapon.ron  grunt_fusion.weapon.ron  grunt_lasers.weapon.ron  standard_plasma.weapon.ron
launcher/: Cargo.toml  justfile
launcher/certificates/: cert.pem  digest.txt  generate.sh  key.pem
launcher/src/: client.rs  host_server.rs  main.rs  separate.rs  server.rs  settings.rs
moveable/: Cargo.toml
net/: input.rs  messages.rs  rpcs.rs  serialize.rs  server.rs
renderer/: Cargo.toml
renderer/src/: bot.rs  hud.rs  lag_compensation.rs  lib.rs  physics.rs  player.rs  projectiles.rs  weapons.rs
renderer/src/camera/: mod.rs
scripting/: conversions.rs
server/: Cargo.toml
server/src/: bot.rs  lag_compensation.rs  lib.rs  player.rs  projectiles.rs  weapons.rs
server/src/player/: mod.rs
sfx/: Cargo.toml
sfx/examples/: sfx.rs
sfx/src/: asset.rs  lib.rs
shaders/: extended_material.wgsl
shaders/particles/: instanced_explosion.wgsl  instanced_smoke.wgsl  instanced_spark.wgsl
shared/: Cargo.toml
shared/src/: bot.rs  damageable.rs  identity.rs  lib.rs  map.rs  moveable.rs  physics.rs  player.rs  projectiles.rs  ships.rs  utils.rs  weapons.rs
shared/src/data/: audio.rs  mod.rs  weapons.rs
shared/src/map/: mod.rs  pathnodes.rs
shared/src/network/: mod.rs  protocol.rs  settings.rs
shared/src/player/: mod.rs
shared/src/states/: mod.rs
snapshot/: history.rs  mod.rs
src/: components.rs  config.rs  console.rs  gamemode.rs  gameplay.rs  hud.rs  ids.rs  main.rs  menu.rs  monsters.rs  net.rs  physics.rs  pickups.rs  player.rs  scripting.rs  sfx.rs  spawn.rs  utils.rs  weapons.rs
src/net/: client.rs
textures/: blue_circuits_256x256.png~  carved_stone_256x256.kra~  carved_stone_256x256.png~
textures/decals/: decal_scorch_emissive_64x64.png~
textures/particles/: explosion_noise_256x256.ktx2
vfx/: Cargo.toml
vfx/assets/shaders/: soft_particle_material.wgsl
vfx/examples/: vfx.rs
vfx/src/: data.rs  lib.rs  material.rs
