[package]
name = "sixdof"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantsum"
path = "src/main.rs"

[dependencies]

# error handling
anyhow = "1.0.77"

# random generator
rand = "0.8.5"

# serialization
serde = { version = "1.0.197", features = ["derive"] }

# used to serialize the game config
toml = "0.8.12"

# used for hand-crafted network serialization
byteorder = "1.5.0"

# network serialization, chosen because it's fast and efficient
bincode = "1.3.3"

# used for the cli
clap = { version = "4.5.3", features = ["derive"] }

# used for logging
log = "0.4.21"

########################################################################
# the engine
bevy = { version = "0.13.1", features = ["serialize"] }

# networking
bevy_renet = { version = "0.0.11", features = ["serde", "transport"] }

# visualize networking
renet_visualizer = { version = "0.0.8", features = ["bevy"] }

# physics
bevy_rapier3d = { version = "0.25.0", features = [
    "debug-render",
    "enhanced-determinism",
] }

# useful tool to inspect entities and components from a GUI
bevy-inspector-egui = "0.23.4"

# used for dev & temporary UI 
bevy_egui = { version = "0.26.0", features = ["immutable_ctx"] }

# in-house crate for map editing
qevy = { git = "https://github.com/BrianWiz/qevy.git", branch = "master"}


# decals (@naasblod on Discord)
bevy_contact_projective_decals = { git = "https://github.com/naasblod/bevy_contact_projective_decals.git" }

# audio (recommended by @ixml (GitGillie) on Discord)
bevy_fmod = { git = "https://github.com/BrianWiz/bevy_fmod.git", branch = "child-spatial-fix" }

# dependency for bevy_fmod
libfmod = "2.206.4"

# Used to import common assets such as ron files. ie. weapons.
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
thiserror = "1.0.58"
mlua = { version = "0.9.6", features = ["lua54", "macros", "vendored"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3
