[workspace]
resolver = "2"
members = [ "sfx",
    "client",
    "launcher",
    "renderer",
    "server",
    "shared", "vfx",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[workspace.dependencies]
lightyear_examples_common = { version = "0.19", default-features = false }
lightyear_avian = { git = "https://github.com/cBournhonesque/lightyear.git", branch = "main", features = [
    "lag_compensation",
    "3d"
] }
lightyear = { git = "https://github.com/cBournhonesque/lightyear.git", branch = "main", default-features = false, features = [
    "leafwing",
    "avian3d",
    "webtransport",
] }
bevy = { version = "0.15.2", default-features = false, features = [
    "multi_threaded",
    "bevy_state",
    "serialize",
    "bevy_scene",
    "bevy_asset",
    "bevy_color",
    "multi_threaded",
    "sysinfo_plugin",
    "file_watcher",
] }
qevy = { git = "https://github.com/BrianWiz/qevy.git", branch = "master", features = ["avian"] }
bevy_config_stack = { git = "https://github.com/BrianWiz/bevy_config_stack.git", branch = "main", package = "bevy_config_stack" }
avian3d = { version = "0.2.0", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "collider-from-mesh",
    "bevy_scene",
    "parallel",
    "serialize",
] }
leafwing-input-manager = { version = "0.16", default-features = false, features = [
    "keyboard",
    "mouse"
] }
bevy_common_assets = { version = "0.12.0", default-features = false, features = [
    "ron"
] }
mint = "0.5.9"
serde = "1.0"

# audio
kira = { git = "https://github.com/Roms1383/kira.git", branch = "feat/doppler" }

# debug/ui
bevy_egui = { version = "0.33.0", default-features = false, features = [
    "open_url",
    "default_fonts",
    "render",
] }
bevy-inspector-egui = { git = "https://github.com/blip-radar/bevy-inspector-egui.git", branch = "egui-0.30", default-features = false, features = [
    "bevy_pbr",
    "bevy_image",
    "bevy_render",
    "egui_open_url",
] }
rand = "0.9.0"


# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

[workspace.lints.rust]
unused_variables = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_imports = "allow"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
