[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", default-features = false }
lightyear.workspace = true
leafwing-input-manager.workspace = true
bevy.workspace = true
avian3d.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
