[package]
name = "launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["client", "server"]
client = ["gui", "dep:client", "renderer?/client", "lightyear_examples_common/client"]
server = ["dep:server", "dep:lightyear_examples_common", "renderer?/server", "lightyear_examples_common/server"]
gui = ["dep:renderer", "shared/render"]


[dependencies]
shared = { path = "../shared", default-features = false }
renderer = { path = "../renderer", default-features = false, optional = true }
client = { path = "../client", default-features = false, optional = true }
server = { path = "../server", default-features = false, optional = true }
bevy.workspace = true
lightyear.workspace = true
lightyear_examples_common = { workspace = true, default-features = false, optional = true}
clap = "4.5"
crossbeam-channel = "0.5.14"
bevy_trenchbroom.workspace = true

[lints]
workspace = true
