[package]
name = "renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared", default-features = false }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "png",
    "hdr",
    "x11",
    "webgl2",
    "bevy_winit",
    "bevy_picking",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
]}

[lints]
workspace = true
