[package]
name = "sfx"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kira.workspace = true
bevy = { workspace = true, default-features = true }
mint.workspace = true
serde.workspace = true

[dev-dependencies]
bevy_flycam = "0.16.0"

[lints]
workspace = true
