[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_trenchbroom = { workspace = true, default-features = false }
bevy_config_stack.workspace = true
lightyear_examples_common.workspace = true
lightyear.workspace = true
leafwing-input-manager.workspace = true
bevy.workspace = true
avian3d.workspace = true
bevy_common_assets.workspace = true
serde.workspace = true
vfx.workspace = true

[features]
default = ["bevy_trenchbroom/bevy_pbr", "bevy_trenchbroom/auto_register", "bevy_trenchbroom/avian"]
headless = ["bevy_trenchbroom/auto_register", "bevy_trenchbroom/avian"]
