[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
render = ["bevy_trenchbroom/client"]

[dependencies]
bevy_trenchbroom.workspace = true
bevy_config_stack.workspace = true
lightyear.workspace = true
leafwing-input-manager.workspace = true
bevy.workspace = true
avian3d.workspace = true
serde.workspace = true
