[package]
name = "vfx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
rand.workspace = true
avian3d.workspace = true
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "png",
    "hdr",
    "x11",
    "webgl2",
    "bevy_winit",
    "bevy_window",
]}

[dev-dependencies]
bevy_flycam = "0.15.0"

[lints]
workspace = true
